# Permikon

./: .gitignore  README.md
.github/workflows/: build.yml
panchira_cli/: Cargo.toml
panchira_cli/src/: bmson.rs  db.rs  evaluator.rs  lib.rs  main.rs  parser.rs
public/: app.js  index.html  ranker.js  script.js  search.js  style.css  tauri-adapter.js  tauri-api.js  tauri-bridge.js  ui.js
src-tauri/: Cargo.toml  cargo_err.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  songdb.rs  storage.rs  tables.rs
