[package]
name = "panchira_cli"
version = "0.1.0"
edition = "2021"

[lib]
name = "panchira_cli"
path = "src/lib.rs"

[[bin]]
name = "panchira"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
regex-lite = "0.1"
encoding_rs = "0.8"
itertools = "0.14"
log = "0.4"
simple_logger = "5"
clap = { version = "4", features = ["derive"] }
rayon = "1"
tempfile = "3"
